# police

./: .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  Dockerfile  Makefile  TODO.md  bootstrap.sh  docker-compose.yml  generate.sh  pyproject.toml  requirements.txt  setup.cfg  start.sh  tree.txt
.github/workflows/: ci.yml  deploy.yml
ai_engine/: README.md  __init__.py
ai_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ai_engine/models/: entities.py  llm_record.py  pipeline_models.py
ai_engine/orchestration/: executor.py  orchestration_models.py  orchestration_service.py  planner.py  routing_rules.py
ai_engine/pipelines/: base_pipeline.py  cv_extraction_pipeline.py  job_extraction_pipeline.py  pipeline_runner.py
ai_engine/providers/: base_provider.py  mcphost_client.py  openai_agents_provider.py  openai_provider.py  provider_registry.py
ai_engine/tools/: base_tool.py  fetch_tool.py  filesystem_tool.py  github_tool.py  markdownify_tool.py  postgres_tool.py  scraper_tool.py  tool_registry.py
ai_engine/utils/: errors.py  json_tools.py  scraping_keywords.py  text_tools.py
dashboard/: main.py
database/: Dockerfile
orchestrator/: Dockerfile
