
[project]
name = "ai_engine"
version = "1.0.0"
description = "Refactored AI Engine"
authors = [{name="Job Bot"}]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=1.10",
    "openai>=1.0.0",
    "mcp-server>=0.1.4",
    "httpx>=0.24.0",
    "tqdm>=4.66.0",
    "anyio>=3.7.0",
    "typing-extensions>=4.8.0"
]
